--- a/Documentation/Changelog.txt
+++ b/Documentation/Changelog.txt
@@ -1,3 +1,10 @@
+	Version 1.3
+		• Added more Games
+			-Battlefield Hardline
+			-Battlefield 3
+			-Battlefield 4
+			-World of Warcraft
+			-Hearthstone
 	Version 1.2
 		• Added Metro Design
 		• Added more Games
